--- a/schedule.html
+++ b/schedule.html
@@ -662,7 +662,7 @@
 
         <div class="mobile-interface">
             <div class="mobile-top-navigation">
-                <button class="mobile-back-btn">← Назад</button>
+                <a href='main.html' class="mobile-back-btn">← Назад</a>
                 <div class="mobile-title-section">
                     <h1>Расписание</h1>
                 </div>
@@ -1252,5 +1252,6 @@
         });
     </script>
 </body>
+
 
 </html>
