--- a/schedule.html
+++ b/schedule.html
@@ -662,7 +662,7 @@
 
         <div class="mobile-interface">
             <div class="mobile-top-navigation">
-                <a href='main.html' class="mobile-back-btn">← Назад</a>
+                <a href='main.html' class="mobile-back-btn" style="text-decoration: none;">← Назад</a>
                 <div class="mobile-title-section">
                     <h1>Расписание</h1>
                 </div>
@@ -1255,3 +1255,4 @@
 
 
 </html>
+
