--- a/main.html
+++ b/main.html
@@ -665,7 +665,7 @@
         </div>
 
         <div class="bottom-buttons">
-            <a href="tg://resolve?domain=@SUD_UUST_TG_bot" class="bottom-btn">Обратная связь</a>
+            <a href="https://t.me/SUD_UUST_TG_bot" class="bottom-btn">Обратная связь</a>
             <a href="answer.html" class="bottom-btn">Частые вопросы</a>
         </div>
     </div>
